--- a/SkyBoard/src/main/java/sky/skyboard/CreateBaggage.form
+++ b/SkyBoard/src/main/java/sky/skyboard/CreateBaggage.form
@@ -172,6 +172,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="peso">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="pesoActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JComboBox" name="ComboNome">
       <Properties>
